2003-06-09  Andreas Kupries  <andreask@activestate.com>

	* generic/tcl.decls:  Ported the changes from the
	* generic/tcl.h:      'tip-59-implementation' branch into the CVS
	* generic/tclBasic.c: head. Regenerated stub table. Regenerated
	* generic/tclInt.h:   the configure's scripts, with help from Joe
	* generic/tclDecls.h  English.
	* generic/tclStubInit.c:
	* generic/tclConfig.c:
	* generic/tclPkgConfig.c:
	* unix/Makefile.in:   
	* unix/configure.in:  The changes in the windows section are not
	* unix/tcl.m4:        yet committed, they await feedback from
	* unix/mkLinks:       David Gravereaux.
	* doc/RegConfig.3:
	* mac/tclMacPkgConfig.c:
	* tests/config.test:

2003-06-09  Don Porter  <dgp@users.sourceforge.net>

	* string.test (string-4.15): Added test for [string first] bug
	reported in Tcl 8.3, where test for all-single-byte-encoded strings
	was not reliable.

2003-06-04  Joe Mistachkin  <joe@mistachkin.com>

        * tools/man2help.tcl: Added duplicate help section checking
        * tools/index.tcl:    and corrected a comment typo for the 
        getTopics proc in index.tcl [Bug #748700].

2003-06-02  Vince Darley  <vincentdarley@users.sourceforge.net>

	* win/tclWinFCmd.c:
        * tests/fCmd.test: fix to [Bug #747575] in which a bad error
        message is given when trying to rename a busy directory to
        one with the same prefix, but not the same name.  Added three
        new tests.
        
2003-05-23  D. Richard Hipp <drh@hwaci.com>

	* win/tclWinTime.c: Add tests to detect and avoid a division by zero
	in the windows precision timer calibration logic.

2003-05-23  Don Porter  <dgp@users.sourceforge.net>

        * generic/tclObj.c (tclCmdNameType):  Converted internal rep
        management of the cmdName Tcl_ObjType the opposite way, to always
        use the twoPtrValue instead of always using the otherValuePtr.
        Previous fix on 2003-05-12 broke several extensions that wanted